# simple-chat-server

./: .gitignore  README.md
client/: CMakeLists.txt
client/src/: main  main.cpp
server/: CMakeLists.txt
server/include/: PollEvent.h  SmartSocket.h  pch.h
server/src/: PollEvent.cpp  SmartSocket.cpp  server  server.cpp
